varios CSS y fix en opac-busquedaResult para covers

--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -1516,7 +1516,7 @@ fieldset.accionesUsuarios {
 	margin-left: -17px;
     margin-top: 9px;
     padding-left: 15px;
-	
+    top:0.9px;  	
 }
 
 .titulo_legend_resaltado {
